--- a/src/css/navBar.css
+++ b/src/css/navBar.css
@@ -11,8 +11,16 @@ body > header > nav{
 
 /* div containing navBar buttons */
 nav > div {
-    width: 25%;
-    min-width: 200px;
+
+    width: 32%;
+    min-width: 250px;
     display: flex;
     justify-content: space-between;
+}
+
+nav > div > button{
+    border: none;
+    padding: .4rem 1rem;
+    border-radius: .3rem;
+    
 }
