--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,4 +1,47 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Rouge+Script&display=swap');
+
 .Home{
-    border: solid 1px green;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+/* all the divs inside the first div within "Home" */
+.Home > div{
+    margin-top: -2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.welcomeText{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.welcomeText > h1{
+    margin: 0;
+    color: rgb(0, 0, 0);
+    font-size: 2.5rem;
+    text-align: center;
+    line-height: 2rem;
+
+}
+
+/* "Welcome" text */
+.welcomeText > h1:first-child{
+    font-family: 'Rouge Script', sans-serif;
+    color: rgb(255, 187, 0);
+    margin-bottom: -.2rem;
+    font-size: 4.2rem;
+    z-index: 1;
+}
+
+.home-description{
+    color: black;
+    width: 340px;
+    text-align: center;
 }
