--- a/src/css/general.css
+++ b/src/css/general.css
@@ -3,6 +3,35 @@ body {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Cochin, Georgia, Times, 'Times New Roman', serif;
+
+    /* for the navbar and the rest of the content */
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+body > img{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+
+    opacity: 55%;
+    object-fit: cover;
+    object-position: 50% 65%;
+    z-index: -999;
+}
+
+.credits > p{
+    font-size: .8rem;
+    text-align: center;
+    margin: 0;
+    padding-bottom: 10px;
+}
+
+a{
+    text-decoration: none;
+    color: black;
 }
 
