--- a/src/css/navBar.css
+++ b/src/css/navBar.css
@@ -2,7 +2,6 @@
 /* Navbar container */
 body > header > nav{
     height: 10vh;
-    border: solid 1px red;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -11,7 +10,6 @@ body > header > nav{
 
 /* div containing navBar buttons */
 nav > div {
-
     width: 32%;
     min-width: 250px;
     display: flex;
@@ -19,8 +17,17 @@ nav > div {
 }
 
 nav > div > button{
-    border: none;
-    padding: .4rem 1rem;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    border: solid 1.5px white;
+    padding: .2rem 1.2rem;
     border-radius: .3rem;
-    
+    background-color: black;
+    color: white;
+    font-weight: bold;
+    background-color: rgb(116, 116, 116);
+    transition: transform .1s ease;
+}
+
+nav > div > button:hover{
+    transform: scale(1.05);
 }
