--- a/src/css/navBar.css
+++ b/src/css/navBar.css
@@ -10,7 +10,7 @@ body > header > nav{
 
 /* div containing navBar buttons */
 nav > div {
-    width: 32%;
+    width: 30%;
     min-width: 250px;
     display: flex;
     justify-content: space-between;
@@ -19,15 +19,25 @@ nav > div {
 nav > div > button{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     border: solid 1.5px white;
-    padding: .2rem 1.2rem;
+    padding: .2rem 1.8rem;
+    max-width: 30%;
     border-radius: .3rem;
     background-color: black;
     color: white;
     font-weight: bold;
     background-color: rgb(116, 116, 116);
+    cursor: pointer;
     transition: transform .1s ease;
+
+    /* for the buttons content to be centered on a mobile view */
+    display: flex;
+    justify-content: center;
 }
 
 nav > div > button:hover{
     transform: scale(1.05);
+}
+
+nav > div > button:active{
+    transform: scale(1.07);
 }
