--- a/src/css/Menu.css
+++ b/src/css/Menu.css
@@ -1,10 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Rouge+Script&display=swap');
+
+.changeBG{
+    background-color: rgb(116, 116, 116);
+}
 
 .Menu{
     flex: 1;
 }
 
 #content > div{
-
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -44,7 +48,6 @@
     background-color: rgba(0, 0, 0, 0.502);
 }
 
-
 .dish-title > h2{
     margin: 0;
     padding: 0 0 1rem 0;
@@ -66,5 +69,30 @@
     max-width: 300px;
     object-fit: cover;
     height: 306px;
+}
 
+/* Our menu text and description */
+.ourMenu > h1{
+    padding: 0;
+    margin: 0px;
+    font-size: 4.3rem;
+    color: gold;
+    font-family: 'Rouge Script', sans-serif;
+    margin-bottom: -1.2rem;
+    
+}
+
+.menuDescription{
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.menuDescription > h1{
+    margin: 0;
+    width: clamp(440px,50%,700px);
+    font-size: 1.8rem;
+    margin-bottom: 1.8rem;
 }
