--- a/src/css/general.css
+++ b/src/css/general.css
@@ -24,6 +24,8 @@ body > img{
 }
 
 .credits > p{
+    padding-top: 10px;
+    color: white;
     font-size: .9rem;
     text-align: center;
     margin: 0;
@@ -31,7 +33,8 @@ body > img{
 }
 
 a{
+
     text-decoration: none;
-    color: black;
+    color: white;
 }
 
