--- a/src/css/About.css
+++ b/src/css/About.css
@@ -1,5 +1,33 @@
 
 .About{
-    border: solid 5px red;
     flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.About > div {
+    border: solid 3px rgba(0, 0, 0, 0.278);
+    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 0.456);
+    margin-bottom: 5rem;
+    width: clamp(450px, 60%, 800px);
+}
+
+.aboutTitle{
+    color: gold;
+    width: 70%;
+    text-align: center;
+    margin: 0;
+}
+
+.aboutTitle > h1{
+    margin: 1rem 0 0 0;
+}
+
+.descText{
+    color: white;
+    width: 75%;
+    font-size: 1.2rem;
+    padding-bottom: 1rem;
 }
